prototype/css/style.css
body
{
  position: relative;
  overflow-x: hidden;
  /*padding-top: 90px;*/
}

/*#bottom
{
  position: relative;
  height: 100%;
  overflow-y: scroll;
}*/
#debug-toggle
{
  position: absolute;
  left: 1vh;
  top: 8vh;
  z-index: 1;
}
#debug-info
{
  position: fixed;
  height: 80vh;
  min-width: 30vw;
  top: 15vh;
  left: 0;
  background: rgba(0,0,0,.5);
  overflow-y: auto;
  z-index: 2;
}
#debug-info>p
{
  text-align: left;
  margin-left: 1vw;
  color: lawngreen;
  font-size: 11px;
}
/*p
{
  color: #efefef;
}*/

#header
{
  width: 100%;  
  text-align: center;
  transform-origin: top;
}

#header-container
{
  height: 100%;
}

/*.navbar
{
  display: block;
  position: relative;
  height: 100%;
}*/

.navbar
{
  transform-origin: top;  
  /*background-color: #66DAFF;*/    
}

.standard-navbar
{
  background: rgba(76,76,76,.95);
  border-bottom: none;
}

.original-navbar
{
  /*padding-top: 3em;*/
  background: rgba(0,0,0,0);
  transform: translateY(0);
  transition: transform 0.5s, background 0.5s;
  border-bottom: none;
  /*height: 90px;*/
}

.shrunken-navbar
{
  background: rgba(76,76,76,.95);
  /*transform: translateY(-3em);*/
}


.navbar-header
{
  height: 100%;
}

.navbar-collapse.collapse.in, .navbar-collapse.collapsing
{
  /*background-color: #ffffff;*/
  background: rgba(76,76,76,.95);
  border: none;
}

.navbar-header>button
{
  margin-top: 38px;
}

@media (min-width: 992)
{
  .navbar .navbar-nav
  {
    display: inline-block;
    /*float: right;*/
    vertical-align: top;
  }

  .navbar .navbar-collapse
  {
    text-align: center;
  }
}

.navbar-nav
{
  margin-top: 38px;
  /*margin-left: 10vw;*/
  margin-right: 4vw;
}

.navbar-nav>li
{
  margin-left: 0.7em;
  margin-right: 0.7em;
}

.navbar-nav>li>a 
{
  font-size: 18px;
  padding: 0 0 .125em 0;
}
.navbar-inverse .navbar-nav>li>a:focus
{
  color: #888888;
}

.navbar-nav>li>button
{
  position: relative;
  bottom: 1.3vh;
  font-size: 18px;
  padding: 0.5em 0.9em;
  background: inherit;
  border: 2px solid #888888;
}
.navbar-nav>li>button:hover
{
  background: #888888;
  text-decoration: none;
}
.navbar-nav>li>button>a
{
  color: #888888;
  text-decoration: none;
}
.navbar-nav>li>button:hover>a
{
  color: #FFFFFF;
  text-decoration: none;
}
.navbar-collapse.collapse.in button, .navbar-collapse.collapsing button
{
  /*padding: 0;*/
  border: none;
  text-decoration: underline
}
.navbar-collapse.collapse.in button:hover, .navbar-collapse.collapsing button:hover
{
  background: none;
  /*border: none;*/
}
.navbar-brand
{  
  /*width: 100%;*/
  height: 100%;
}
.navbar-brand>img
{
  transform-origin: left;
  max-width: 100%;
  max-height: 100%;
}



/*#gcs-splash, #gcs-about, #gcs-services, #gcs-portfolio, #gcs-team, #gcs-clients, #gcs-testimonials, #contact-us, #gcs-sitemap*/
.gcs-bottom-section
{
  transition: height 0.5s ease-in-out;
  position: relative;
  /*top: 90px;*/
}
/*body *:hover .gcs-bottom-section
{
  transition: height 0.5s ease-in-out;
}*/

.section-headline
{
  border-bottom: 2px solid;
  padding-bottom: 1vh;
  margin-bottom: 5vh;
  display: inline-flex;
}

#gallery
{
  position: fixed;
  top: 0px;
  width: 100%;
  height: 100vh;
  text-align: center;
}

#gcs-backgrounds
{
  text-align: center;
  position: fixed;
  top: 0px;
  width: 100vw;  
}

#gcs-backgrounds>.img-container
{
  display: block;
  position: relative;
  width: 100vw;
  height: 100vh;
  margin: auto;
  overflow: hidden;
}

#gcs-backgrounds>.img-container>img
{
  /*transition: all .2s ease-in-out; */
  display:block;
  position: relative;
  width: auto;
  height: 100%;
}

#gc-carousel
{
  width: 100%;
  height: 100%;
}

#gc-carousel>.carousel-inner
{
  width: 100%;
  height: 100%;
}

#gc-carousel>.carousel-inner>.item,
#gc-carousel>.carousel-inner>.active
{
  width: 100%;
  height: 100%;
}
.carousel-fade .carousel-inner .item {
  opacity: 0;
  -webkit-transition-property: opacity;
  -moz-transition-property: opacity;
  -o-transition-property: opacity;
  transition-property: opacity;
}
.carousel-fade .carousel-inner .active {
  opacity: 1;
}
.carousel-fade .carousel-inner .active.left,
.carousel-fade .carousel-inner .active.right {
  left: 0;
  opacity: 0;
  z-index: 1;
}
.carousel-fade .carousel-inner .next.left,
.carousel-fade .carousel-inner .prev.right {
  opacity: 1;
}
.carousel-fade .carousel-control {
  z-index: 2;
}

.fill
{
  width: 100%;
  height: 100%;
  background-position: center;
  background-size: contain;
  background-repeat: no-repeat;
}

/*.gcs-background
{
  position: absolute;
  width: 100%;
  height: 100%;
  opacity: .95;
  z-index: 2;
}*/

#gcs-splash
{
  min-height: 100vh;
  width: 100vw;
  background: rgba(0,0,0,.5);
}
#gcs-splash>.container
{
  text-align: center;
}
#gcs-splash>.container>.headlines
{
  position: fixed;
 	top: 30%;
  left: 0;
  right: 0;
  margin: 0 auto;
}
#gcs-splash>.container>#splash-bullets
{
  position: fixed;
 	top: 80%;
  left: 0;
  right: 0;
  margin: 0 auto;
}


#text-panel
{
  position: relative;
  height: 30vw;
  /*padding: 1vw;*/
}

#text-panel>span
{
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 200;
}

#text-panel>span>*
{
  width: 96%;
}

#text-panel>span>img
{
  height: 100%;
}



#gcs-about
{
  min-height: 50vh;
  /*background-image: url('../img/PS_1.png');  */
  background: rgba(0,0,0,0.5);
  /*background: rgba(141,221,247, .8);*/
}
#gcs-about>.container
{
  height: 100%;
}
#gcs-about h2
{
  font-style: italic;
}
#gcs-about .row:first-of-type
{
  position: relative;
  margin-top: 14vh;
}
#gcs-about .row:last-of-type
{
  position: relative;
  margin-bottom: 14vh;
}
#gcs-about p
{
  color: #D1D1D1;
}

#gcs-services
{
  min-height: 100vh;
  /*background-image: url('../img/PS_2.png');*/
  /*background-color: #FDAF0F;*/
  /*background: rgba(251,156,2, 1);*/
  background: rgba(216,212,213,1);
}
#gcs-services p
{
  color: black;
  font-size: 18px;
}
#gcs-services h3
{
  color: black;
}
#gcs-services>.row
{
  text-align: center;
}
#gcs-services>.row>h3
{
  color: black;
  border-bottom: 2px solid black;
  padding-bottom: 1vh;
  display: inline-flex;
}
#gcs-services .service-tile
{
  opacity: 0;
}
#gcs-services .service-tile>.img-container
{
  width: 100%;
  text-align: center;
}
#gcs-services .service-tile>.img-container>img
{
  border: 2px solid black;
  border-radius: 50%;
  width: 30%;
  max-height: 100%;
}
#gcs-services .service-tile>.caption
{
  width: 50%;
  margin: 0 auto;
}
#gcs-services .service-tile>.caption>h3
{
  border-bottom: 4px double black;
  padding-bottom: 1vh;
}

#gcs-portfolio
{
  min-height: 90vh;
  /*background-image: url('../img/PS_3.png');*/
  background: #272727;
}
#gcs-portfolio .row>div
{
  padding: 0;
}

#gcs-portfolio .project-panel,
#gcs-team .team-panel
{  
  transform-origin: center;
}

.spin-element
{
  animation-name: spin;
  animation-duration: .7s;
  animation-timing-function: ease;
  /*animation-timing-function: cubic-bezier(.65, 1.95, .03, .32);*/
}

.tiny-size
{
  transform: rotate(0) scale(0,0);
}
/*.full-size
{
  transform: rotate(0) scale(1.0, 1.0);
}*/

@keyframes spin
{
  100%
  {
    transform: rotate(720deg) scale(1.0, 1.0);
  }
  /*100%
  {
    transform: rotate(0deg);
  }*/
}

#gcs-portfolio .project-panel
{
  /*transition: all .5s ease-in-out;*/
  position: relative;
  border: none;
  padding: 0;
  overflow: hidden;
}

#gcs-portfolio .project-panel>.tn-description
{
  transition: all .5s ease-in-out;
  position: absolute;
  top: -100%;
  background: rgba(0,0,0,.6);
  opacity: 1;
  /*z-index: 1;*/
  width: 100%;
  height: 100%;
  /*visibility: hidden;*/
  text-align: center;
  /*transform: scale(0,0);*/
}

#gcs-portfolio .project-panel:hover>.tn-description
{
  top: 0%;
  /*opacity: 1;*/
  /*z-index: 1;*/
  /*visibility: visible;*/
  /*transform: scale(1,1);*/
}

#gcs-portfolio .project-panel>img
{
  transition: all .5s ease-in-out;
  transform-origin: center;
  width: 100%;
  max-height: 100%;
}

#gcs-portfolio .project-panel:hover>img
{
  transform: scale(1.2, 1.2);
  /*z-index: 2;*/
}

#gcs-team
{
  min-height: 90vh;
  /*background-image: url('../img/PS_2.png');*/
  /*background: #D1D1D1;*/
  background: rgba(0,0,0,.6);
}

/*#gcs-team .team-panel
{
  background-color: white;
  border-radius: 30px;
  width: 100%;
  max-height: 100%;
  overflow: hidden;
}*/

/*#gcs-team .team-panel:hover
{
  animation-name: grow;
  animation-duration: .7s;
}*/

.no-size
{
  transform: scale(0, 0);
}

#gcs-team .row
{
  max-height: 30%; 
  margin-bottom: 5vh; 
}
#gcs-team .team-panel h5
{
  transition-property: border;
  transition-duration: .5s;
  border-bottom: 2px solid #BCBCBC;
  padding-bottom: 3px;
  display: inline-flex;
}
#gcs-team .team-panel:hover h5
{
  border-bottom: 2px solid rgba(251,171,17, 1);
}
#gcs-team .team-panel>img
{
  transition-property: border;
  transition-duration: .5s;
  border: 5px solid #BCBCBC;
  border-radius: 50%;
  display: block;
  width: 60%;
  /*float: left;*/
  max-height: 60%;
  overflow: hidden;
}
#gcs-team .team-panel:hover>img
{
  border: 5px solid rgba(251,171,17, 1);
}
#gcs-team .team-panel>span
{
  padding: .5vw;
  width: 100%;
  /*float: left;*/
  height: auto;
}
#gcs-team .team-panel>.tp-description
{
  transition: max-height .4s ease-in-out;
  max-height: 0;
  /*max-height: 1%;*/
  overflow: hidden;
  /*transform-origin: top center;
  transform: scaleY(0);*/
  /*position: absolute;*/
}
#gcs-team .team-panel:hover>.tp-description
{
  /*transition: height .5s ease-in-out;*/
  max-height: 300px;
  /*transform: scaleY(1.0);*/
  display: block;
  /*position: relative;*/
}
#gcs-team .team-panel>.tp-description>.tp-description-header
{
  /*display: inline-block;*/
  max-height: 50px;
  margin-bottom: 0;
  /*float: right;*/
}
#gcs-team .team-panel>.tp-description>.tp-description-header a>img
{
  width: 24px;
  height: auto;
}
/*#gcs-team .team-panel>.tp-description>div
{
  transition: transform .4s ease-in-out;
  transform-origin: bottom center;
  transform: scaleY(100.0);
}
#gcs-team .team-panel:hover>.tp-description>div
{
  transform: scaleY(1.0);
}*/
.grow-element
{
  animation-name: grow;
  animation-duration: .6s;
  animation-timing-function: cubic-bezier(.65, 1.95, .03, .32);
}

@keyframes grow
{
  100%
  {
    transform: scale(1.0, 1.0);
  }
}

#gcs-testimonials
{
  /*min-height: 60vh;*/
  background: rgba(100,100,100,1);
}
#gcs-testimonials p
{
  color: white;
}
#gcs-testimonials>.carousel-container
{
  padding: 0 0 0 0;
}
#gcs-testimonials>.container-fluid>#carousel-testimonials
{
  /*min-height: 60vh;*/
  /*background: rgba(100,100,100,1);*/
  padding: 6vh 0;
}
#gcs-testimonials>.container-fluid>#carousel-testimonials>.carousel-inner
{
  
  /*height: 90%;*/
}
#gcs-testimonials>.container>#carousel-testimonials .item
{
  /*height: 100%;*/
}
#gcs-testimonials .test-pic>img
{
  border-radius: 50%;
  width: 40%;
  max-height: 40%;
}

#gcs-clients
{
  min-height: 40vh;
  background: rgba(216,212,213,1);
}
#gcs-clients .row
{
  text-align: center;
}
#gcs-clients h3
{
  color: black;
  border-bottom: 2px solid black;
  padding-bottom: 1vh;
  display: inline-flex;
}

#gcs-clients p
{
  color: black;
}

/*.left_translate
{
  transform: translateX(25%);
  transition-duration: 1000ms;
}

.right_translate
{
  transform: translateX(-25%);
  transition-duration: 1000ms;
}

.middle_translate
{
  transform: translateX(0);
  transition-duration: 0;
}*/

#contact-us
{
  /*background-image: url('../img/PS_2.png');*/
  /*background: rgba(0,0,0, .6);*/
  background: rgba(0,0,0,.9);
}

#gcs-sitemap
{
  background: rgba(0,0,0,1);
}

